update: bailizhu demo

--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Editorial by HTML5 UP</title>
+    <title>百里助企業有限公司 BAI LI CHU ENTERPRISE CO.,LTD</title>
     <meta charset="utf-8"/>
     <meta
             name="viewport"
@@ -24,8 +24,7 @@
             <!-- Header -->
             <header id="header">
                 <a href="index.html" class="logo"
-                ><strong><img width="50px" src="images/logo.png" alt=""/>
-                    BAI LI CHU ENTERPRISE CO.,LTD</a
+                ><strong><img width="300px" src="images/big-logo.png" alt=""/></a
                 ></strong>
                 <!-- <ul class="icons">
                   <li>
