--- a/e_cloud/index.html
+++ b/e_cloud/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel=icon href=/favicon.ico>
-    <title>oort-helper</title>
-    <link href="./css/app.cc02156f.css" rel="preload" as="style" />
-    <link href="./js/app.bb44f311.js" rel="preload" as="script" />
+    <link rel="icon" href="./favicon.ico" />
+    <title>e-Cloud</title>
+    <link href="./css/app.de572cb1.css" rel="preload" as="style" />
+    <link href="./js/app.51b324bf.js" rel="preload" as="script" />
     <link href="./js/chunk-vendors.d7ff8055.js" rel="preload" as="script" />
-    <link href="./css/app.cc02156f.css" rel="stylesheet" />
+    <link href="./css/app.de572cb1.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
@@ -20,6 +20,6 @@
     </noscript>
     <div id="app"></div>
     <script src="./js/chunk-vendors.d7ff8055.js"></script>
-    <script src="./js/app.bb44f311.js"></script>
+    <script src="./js/app.51b324bf.js"></script>
   </body>
 </html>
