--- a/eCloud/index.html
+++ b/eCloud/index.html
@@ -5,15 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="./favicon.ico" />
-    <title>e-Cloud</title>
-    <link href="./css/app.c99f9eff.css" rel="preload" as="style" />
-    <link href="./js/app.fe669cad.jsopen " rel="preload" as="script" />
-    <link
-      href="./js/chunk-vendors.d7ff8055.jsopen "
-      rel="preload"
-      as="script"
-    />
-    <link href="./css/app.c99f9eff.css" rel="stylesheet" />
+    <title>eCloud</title>
+    <link href="./css/app.f3565205.css" rel="preload" as="style" />
+    <link href="./js/app.2865d2b5.js" rel="preload" as="script" />
+    <link href="./js/chunk-vendors.6d106d76.js" rel="preload" as="script" />
+    <link href="./css/app.f3565205.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
@@ -23,7 +19,7 @@
       </strong>
     </noscript>
     <div id="app"></div>
-    <script src="./js/chunk-vendors.d7ff8055.jsopen "></script>
-    <script src="./js/app.fe669cad.jsopen "></script>
+    <script src="./js/chunk-vendors.6d106d76.js"></script>
+    <script src="./js/app.2865d2b5.js"></script>
   </body>
 </html>
