--- a/eCloud/index.html
+++ b/eCloud/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="./favicon.ico" />
-    <title>eCloud</title>
-    <link href="./css/app.9ea39cfc.css" rel="preload" as="style" />
-    <link href="./js/app.3d94f08a.js" rel="preload" as="script" />
-    <link href="./js/chunk-vendors.6d106d76.js" rel="preload" as="script" />
-    <link href="./css/app.9ea39cfc.css" rel="stylesheet" />
+    <title>PAL Web Test Platform</title>
+    <link href="./css/app.3138f9d4.css" rel="preload" as="style" />
+    <link href="./css/chunk-vendors.e6d5936d.css" rel="preload" as="style" />
+    <link href="./js/app.0c112877.js" rel="preload" as="script" />
+    <link href="./js/chunk-vendors.8c96f837.js" rel="preload" as="script" />
+    <link href="./css/chunk-vendors.e6d5936d.css" rel="stylesheet" />
+    <link href="./css/app.3138f9d4.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
@@ -19,7 +21,7 @@
       </strong>
     </noscript>
     <div id="app"></div>
-    <script src="./js/chunk-vendors.6d106d76.js"></script>
-    <script src="./js/app.3d94f08a.js"></script>
+    <script src="./js/chunk-vendors.8c96f837.js"></script>
+    <script src="./js/app.0c112877.js"></script>
   </body>
 </html>
