update bailichu contact

--- a/bailichu/elements.html
+++ b/bailichu/elements.html
@@ -610,7 +610,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
                 </p>
                 <ul class="contact">
                     <li class="icon solid fa-envelope">
-                        <a href="#">information@untitled.tld</a>
+                        <a href="#">nicole@bailichu.com.tw</a>
                     </li>
                     <li class="icon solid fa-phone">02-8647-3497</li>
                     <li class="icon solid fa-home">
