--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -211,7 +211,7 @@
                         </ul>
                     </li>
                     <li><a href="#">產品介紹</a></li>
-                    <li><a href="#">聯絡我們</a></li>
+                    <li><a href="contact.html">聯絡我們</a></li>
                 </ul>
             </nav>
 
@@ -267,7 +267,7 @@
                 </p>
                 <ul class="contact">
                     <li class="icon solid fa-envelope">
-                        <a href="#">information@untitled.tld</a>
+                        <a href="#">nicole@bailichu.com.tw</a>
                     </li>
                     <li class="icon solid fa-phone">02-8647-3497</li>
                     <li class="icon solid fa-home">
