--- a/bailichu/generic.html
+++ b/bailichu/generic.html
@@ -224,7 +224,7 @@
                 </p>
                 <ul class="contact">
                     <li class="icon solid fa-envelope">
-                        <a href="#">information@untitled.tld</a>
+                        <a href="#">nicole@bailichu.com.tw</a>
                     </li>
                     <li class="icon solid fa-phone">02-8647-3497</li>
                     <li class="icon solid fa-home">
