update index and contact

--- a/bailichu/contact.html
+++ b/bailichu/contact.html
@@ -54,8 +54,8 @@
               </p>
 
               <p>
-                <span class="fa fa-envelope-o" aria-hidden="true"></span>
-                Customer E-mail: nicole@bailichu.com.tw
+                <span class="fa fa-envelope" aria-hidden="true"></span>
+                客服信箱: nicole@bailichu.com.tw
               </p>
             </div>
             <span class="image object">
