--- a/bailichu/elements.html
+++ b/bailichu/elements.html
@@ -553,7 +553,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
                             <li><a href="#">Feugiat Veroeros</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">產品介紹</a></li>
+                    <li><a href="elements.html">產品介紹</a></li>
                     <li><a href="#">聯絡我們</a></li>
                 </ul>
             </nav>
