--- a/bailichu/generic.html
+++ b/bailichu/generic.html
@@ -167,7 +167,7 @@
                             <li><a href="#">Feugiat Veroeros</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">產品介紹</a></li>
+                    <li><a href="elements.html">產品介紹</a></li>
                     <li><a href="#">聯絡我們</a></li>
                 </ul>
             </nav>
