--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -131,7 +131,7 @@
                 </header>
                 <ul>
                     <li><a href="index.html">公司介紹</a></li>
-                    <li><a href="generic.html">生產能力</a></li>
+                    <li><a href="production_capacity.html">生產能力</a></li>
                     <li><a href="equipment.html">生產設備</a></li>
                     <li>
                         <span class="opener">作業項目</span>
