--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>百里助企業有限公司 BAI LI CHU ENTERPRISE CO.,LTD</title>
+    <title>百里助企業有限公司</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="icon" href="./favicon.png" />
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
@@ -151,13 +152,6 @@
       <!-- Sidebar -->
       <div id="sidebar">
         <div class="inner">
-          <!-- Search -->
-          <!-- <section id="search" class="alt">
-                                      <form method="post" action="#">
-                                          <input type="text" name="query" id="query" placeholder="Search" />
-                                      </form>
-                                  </section> -->
-
           <!-- Menu -->
           <nav id="menu">
             <header class="major">
@@ -165,7 +159,7 @@
             </header>
             <ul>
               <li><a href="index.html">公司介紹</a></li>
-              <li><a href="generic.html">生產能力</a></li>
+              <li><a href="production_capacity.html">生產能力</a></li>
               <li><a href="equipment.html">生產設備</a></li>
               <li>
                 <span class="opener">作業項目</span>
@@ -182,63 +176,25 @@
           </nav>
 
           <!-- Section -->
-          <!--            <section>-->
-          <!--                <header class="major">-->
-          <!--                    <h2>Ante interdum</h2>-->
-          <!--                </header>-->
-          <!--                <div class="mini-posts">-->
-          <!--                    <article>-->
-          <!--                        <a href="#" class="image"-->
-          <!--                        ><img src="images/pic07.jpg" alt=""-->
-          <!--                        /></a>-->
-          <!--                        <p>-->
-          <!--                            Aenean ornare velit lacus, ac varius enim lorem ullamcorper-->
-          <!--                            dolore aliquam.-->
-          <!--                        </p>-->
-          <!--                    </article>-->
-          <!--                    <article>-->
-          <!--                        <a href="#" class="image"-->
-          <!--                        ><img src="images/pic08.jpg" alt=""-->
-          <!--                        /></a>-->
-          <!--                        <p>-->
-          <!--                            Aenean ornare velit lacus, ac varius enim lorem ullamcorper-->
-          <!--                            dolore aliquam.-->
-          <!--                        </p>-->
-          <!--                    </article>-->
-          <!--                    <article>-->
-          <!--                        <a href="#" class="image"-->
-          <!--                        ><img src="images/pic09.jpg" alt=""-->
-          <!--                        /></a>-->
-          <!--                        <p>-->
-          <!--                            Aenean ornare velit lacus, ac varius enim lorem ullamcorper-->
-          <!--                            dolore aliquam.-->
-          <!--                        </p>-->
-          <!--                    </article>-->
-          <!--                </div>-->
-          <!--                <ul class="actions">-->
-          <!--                    <li><a href="#" class="button">More</a></li>-->
-          <!--                </ul>-->
-          <!--            </section>-->
-
-          <!-- Section -->
           <section>
             <header class="major">
-              <h2>Get in touch</h2>
+              <h2>經營理念</h2>
             </header>
             <p>
-              Sed varius enim lorem ullamcorper dolore aliquam aenean ornare
-              velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed
-              aliquam facilisis ante interdum. Sed nulla amet lorem feugiat
-              tempus aliquam.
+              百里助企業為SMT之專業代工工廠，本公司成立迄今秉持著「誠信、專業、品質第一、客戶至上」的經營理念，不斷提升加工技術精進加工品質，精益求精，來滿足客戶之需求，務實踏實的管理經營亦廣受客戶們一致的好評。
+            </p>
+            <p>
+              本公司未來將繼續以高專業、高品質的生產製造，提供客戶滿意的產品品質，並以專業服務及高效率的精神來滿足客戶需求及提供客戶最完善的服務。
             </p>
             <ul class="contact">
               <li class="icon solid fa-envelope">
-                <a href="#">nicole@bailichu.com.tw</a>
+                <a href="mailto:nicole@bailichu.com.tw"
+                  >nicole@bailichu.com.tw</a
+                >
               </li>
               <li class="icon solid fa-phone">02-8647-3497</li>
               <li class="icon solid fa-home">
-                1F., No.210, Sec. 3, Datong Rd.,<br />
-                Xizhi Dist., New Taipei City 221, <br />Taiwan (R.O.C.)
+                新北市汐止區大同路三段210號1樓
               </li>
             </ul>
           </section>
