--- a/bailichu/production_capacity.html
+++ b/bailichu/production_capacity.html
@@ -24,48 +24,38 @@
         <div class="inner">
           <!-- Header -->
           <header id="header">
-            <a href="index.html" class="logo">
-              <strong>
-                <img width="300px" src="images/big-logo.png" alt="" />
-              </strong>
+            <a href="index.html" class="logo"
+              ><img width="300px" src="images/big-logo.png" alt="" />
             </a>
           </header>
 
-          <!-- Banner -->
-          <section id="banner">
-            <div class="content">
-              <header>
-                <h1>百里助<br />企業有限公司<br /></h1>
-                <h2 style="font-weight: normal">
-                  BAI LI CHU ENTERPRISE CO.,LTD
-                </h2>
-                <!-- <p>We do our best.</p> -->
-              </header>
-              <p>
-                <span class="fa fa-phone"></span>
-                電話: 02-8647-3497
-              </p>
+          <!-- Content -->
+          <section>
+            <header class="main">
+              <h1>生產能力 Production Capacity</h1>
+            </header>
 
-              <p>
-                <span class="fa fa-home" aria-hidden="true"></span>
-                地址: 新北市汐止區大同路三段210號1樓
-              </p>
+            <span class="image main"
+              ><img src="images/prod_flow.png" alt=""
+            /></span>
 
-              <p>
-                <span class="fa fa-envelope" aria-hidden="true"></span>
-                客服信箱: nicole@bailichu.com.tw
-              </p>
-            </div>
-            <span class="image object">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3613.8558343570853!2d121.67217131510348!3d25.072874983954115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x345d53a78eb8cb5f%3A0xda8c4e24455d1bad!2zMjIx5paw5YyX5biC5rGQ5q2i5Y2A5aSn5ZCM6Lev5LiJ5q61MjEw6Jmf!5e0!3m2!1szh-TW!2stw!4v1569160175137!5m2!1szh-TW!2stw"
-                width="600"
-                height="450"
-                frameborder="0"
-                style="border:0;"
-                allowfullscreen=""
-              ></iframe>
-            </span>
+            <hr class="major" />
+            <h1>生產流程 Production Flow Chart</h1>
+            <h4>前置作業</h4>
+            <ul>
+              <li>領料、盤點材料數量、核對PCB數量。</li>
+              <li>填寫流程指示單：（核對BOM表與程式內容，並確認製程。）</li>
+            </ul>
+            <h4>印刷作業</h4>
+            <ul>
+              <li>領料、盤點材料數量、核對PCB數量。</li>
+              <li>填寫流程指示單：（核對BOM表與程式內容，並確認製程。）</li>
+            </ul>
+            <h4>前置作業</h4>
+            <ul>
+              <li>領料、盤點材料數量、核對PCB數量。</li>
+              <li>填寫流程指示單：（核對BOM表與程式內容，並確認製程。）</li>
+            </ul>
           </section>
         </div>
       </div>
