--- a/bailichu/elements.html
+++ b/bailichu/elements.html
@@ -542,7 +542,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
                 </header>
                 <ul>
                     <li><a href="index.html">公司介紹</a></li>
-                    <li><a href="generic.html">生產能力</a></li>
+                    <li><a href="production_capacity.html">生產能力</a></li>
                     <li><a href="equipment.html">生產設備</a></li>
                     <li>
                         <span class="opener">作業項目</span>
