update production capacity

--- a/bailichu/production_capacity.html
+++ b/bailichu/production_capacity.html
@@ -36,26 +36,13 @@
             </header>
 
             <span class="image main"
-              ><img src="images/prod_flow.png" alt=""
+              ><img src="images/capacity/prod_flow.png" alt=""
             /></span>
-
             <hr class="major" />
             <h1>生產流程 Production Flow Chart</h1>
-            <h4>前置作業</h4>
-            <ul>
-              <li>領料、盤點材料數量、核對PCB數量。</li>
-              <li>填寫流程指示單：（核對BOM表與程式內容，並確認製程。）</li>
-            </ul>
-            <h4>印刷作業</h4>
-            <ul>
-              <li>領料、盤點材料數量、核對PCB數量。</li>
-              <li>填寫流程指示單：（核對BOM表與程式內容，並確認製程。）</li>
-            </ul>
-            <h4>前置作業</h4>
-            <ul>
-              <li>領料、盤點材料數量、核對PCB數量。</li>
-              <li>填寫流程指示單：（核對BOM表與程式內容，並確認製程。）</li>
-            </ul>
+            <span class="image main"
+              ><img src="images/capacity/flow_chart.png" alt=""
+            /></span>
           </section>
         </div>
       </div>
