--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -274,6 +274,20 @@
                 /></span>
               </div>
             </div>
+            <hr />
+            <div class="row gtr-200">
+              <div class="col-6 col-12-medium">
+                <h2>全自動印刷機 HTGD-GD2000</h2>
+                <p>
+                  1.自動定位架設鋼板<br />2.可自行設置清潔的間距以及擦拭的模式
+                </p>
+              </div>
+              <div class="col-6 col-12-medium">
+                <span class="image fit"
+                  ><img src="images/eq/gd2000.jpeg" alt=""
+                /></span>
+              </div>
+            </div>
           </section>
         </div>
       </div>
