--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -288,6 +288,77 @@
                 /></span>
               </div>
             </div>
+            <hr />
+            <div class="row gtr-200">
+              <div class="col-6 col-12-medium">
+                <span class="image fit"
+                  ><img style="height: auto;" src="images/eq/axc800.jpeg" alt=""
+                /></span>
+              </div>
+              <div class="col-6 col-12-medium">
+                <h2>X-RAY 元件計數器-AXC-800</h2>
+                <span class="image fit"
+                  ><img src="images/eq/axc8002.jpeg" alt=""/><img
+                    src="images/eq/axc8003.jpeg"
+                    alt=""
+                /></span>
+              </div>
+            </div>
+            <hr />
+            <div class="row gtr-200">
+              <div class="col-6 col-12-medium">
+                <h2>全自動印刷機 HTGD-GD2000</h2>
+                <span class="image fit"
+                  ><img
+                    style="height: auto;"
+                    src="images/eq/xd75001.jpeg"
+                    alt=""/><img
+                    style="height: auto;"
+                    src="images/eq/xd75002.jpeg"
+                    alt=""/><img
+                    style="height: auto;"
+                    src="images/eq/xd75003.jpeg"
+                    alt=""
+                /></span>
+              </div>
+              <div class="col-6 col-12-medium">
+                <span class="image fit"
+                  ><img src="images/eq/xd7500.png" alt=""
+                /></span>
+              </div>
+            </div>
+            <hr />
+            <div class="row gtr-200">
+              <div class="col-6 col-12-medium">
+                <span class="image fit"
+                  ><img style="height: auto;" src="images/eq/mv8515.jpeg" alt=""
+                /></span>
+              </div>
+              <div class="col-6 col-12-medium">
+                <h2>
+                  AOI 自動光學檢查機<br />
+                  MV-8515-M
+                </h2>
+                <span class="image fit"
+                  ><img src="images/eq/mv85152.jpeg" alt=""
+                /></span>
+              </div>
+            </div>
+            <hr />
+            <div class="row gtr-200">
+              <div class="col-6 col-12-medium">
+                <h2>AOI 自動光學檢查機 <br />MV-8515-L</h2>
+                <span class="image fit"
+                  ><img src="images/eq/mv8515l3.jpeg" alt=""
+                /></span>
+              </div>
+              <div class="col-6 col-12-medium">
+                <span class="image fit"
+                  ><img src="images/eq/mv8515l.jpeg" alt=""
+                /></span>
+              </div>
+            </div>
+            <hr />
           </section>
         </div>
       </div>
