--- a/bailichu/contact.html
+++ b/bailichu/contact.html
@@ -81,7 +81,64 @@
             <ul>
               <li><a href="index.html">公司介紹</a></li>
               <li><a href="production_capacity.html">生產能力</a></li>
-              <li><a href="equipment.html">生產設備</a></li>
+              <li>
+                <span class="opener">生產設備</span>
+                <ul>
+                  <li><a href="equipment.html">生產設備</a></li>
+                  <li>
+                    <a href="equipment.html#ys12">YAMAHA 貼片機 - YS12</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#ys12f">YAMAHA 貼片機 - YS12F</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#ep-710"
+                      >全自動印刷機 Europlacer EP-710</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#v510i"
+                      >錫膏檢測機(SPI): VITROX(V510I)</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#nxt3">置件機-高速機 FUJI-NXT III</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#g200">
+                      電子零件貼裝機 <br />
+                      Electronic Part Mounter SONY SI-G200MK3</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#mv8515l"
+                      >AOI 自動光學檢查機 <br />MV-8515-L</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#ysd">YAMAHA-YSD 高速點膠機</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#100xg">YAMAHA 貼片機 100XG</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#125n2">BTU 氮氣迴焊爐-125N</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#gd2000">全自動印刷機 HTGD-GD2000</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#axc800">X-RAY 元件計數器-AXC-800</a>
+                  </li>
+                  <li><a href="equipment.html#xd7500">X-RAY XD7500</a></li>
+                  <li>
+                    <a href="equipment.html#mv8515m"
+                      >AOI 自動光學檢查機<br />
+                      MV-8515-M</a
+                    >
+                  </li>
+                </ul>
+              </li>
               <li>
                 <span class="opener">作業項目</span>
                 <ul>
@@ -123,8 +180,7 @@
           <!-- Footer -->
           <footer id="footer">
             <p class="copyright">
-              &copy; BaiLiChu. All rights reserved. Design:
-              <a href="http://errol.tw">Errol</a>.
+              &copy; BaiLiChu. All rights reserved.
             </p>
           </footer>
         </div>
