--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -29,11 +29,11 @@
 
           <!-- Content -->
           <section>
-            <header class="main">
+            <header class="main" id="head">
               <h1>生產設備 Production Equipment</h1>
             </header>
 
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="ys12">
               <div class="col-6 col-12-medium">
                 <h2>YAMAHA 貼片機 - YS12</h2>
                 <table>
@@ -101,7 +101,7 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="ys12f">
               <div class="col-6 col-12-medium">
                 <span class="image fit"
                   ><img src="images/eq/ys12f.jpg" alt=""
@@ -170,7 +170,7 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="ep-710">
               <div class="col-6 col-12-medium">
                 <h2>全自動印刷機 Europlacer EP-710</h2>
                 <p>
@@ -184,7 +184,7 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="v510i">
               <div class="col-6 col-12-medium">
                 <span class="image fit"
                   ><img src="images/eq/v510i.jpg" alt=""
@@ -198,7 +198,7 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="nxt3">
               <div class="col-6 col-12-medium">
                 <h2>置件機-高速機 FUJI-NXT III</h2>
                 <span class="image fit"
@@ -212,10 +212,10 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="g200">
               <div class="col-6 col-12-medium">
                 <span class="image fit"
-                  ><img src="images/eq/g2002.png" alt=""
+                  ><img src="images/eq/g200.jpeg" alt=""
                 /></span>
               </div>
               <div class="col-6 col-12-medium">
@@ -224,12 +224,26 @@
                   Electronic Part Mounter SONYSI-G200MK3
                 </h2>
                 <span class="image fit"
-                  ><img src="images/eq/g200.jpeg" alt=""
+                  ><img src="images/eq/g2002.png" alt=""
                 /></span>
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="mv8515l">
+              <div class="col-6 col-12-medium">
+                <h2>AOI 自動光學檢查機 <br />MV-8515-L</h2>
+                <span class="image fit"
+                  ><img src="images/eq/mv8515l3.jpeg" alt=""
+                /></span>
+              </div>
+              <div class="col-6 col-12-medium">
+                <span class="image fit"
+                  ><img src="images/eq/mv8515l.jpeg" alt=""
+                /></span>
+              </div>
+            </div>
+            <hr />
+            <div class="row gtr-200" id="ysd">
               <div class="col-6 col-12-medium">
                 <span class="image fit"
                   ><img src="images/eq/ysd.jpeg" alt=""
@@ -245,7 +259,7 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="100xg">
               <div class="col-6 col-12-medium">
                 <h2>YAMAHA 貼片機 100XG</h2>
                 <span class="image fit"
@@ -259,7 +273,7 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="125n2">
               <div class="col-6 col-12-medium">
                 <span class="image fit"
                   ><img src="images/eq/125n2.jpg" alt=""/><img
@@ -275,7 +289,7 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="gd2000">
               <div class="col-6 col-12-medium">
                 <h2>全自動印刷機 HTGD-GD2000</h2>
                 <p>
@@ -289,7 +303,7 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="axc800">
               <div class="col-6 col-12-medium">
                 <span class="image fit"
                   ><img style="height: auto;" src="images/eq/axc800.jpeg" alt=""
@@ -305,9 +319,9 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="xd7500">
               <div class="col-6 col-12-medium">
-                <h2>全自動印刷機 HTGD-GD2000</h2>
+                <h2>X-RAY XD7500</h2>
                 <span class="image fit"
                   ><img
                     style="height: auto;"
@@ -328,7 +342,7 @@
               </div>
             </div>
             <hr />
-            <div class="row gtr-200">
+            <div class="row gtr-200" id="mv8515m">
               <div class="col-6 col-12-medium">
                 <span class="image fit"
                   ><img style="height: auto;" src="images/eq/mv8515.jpeg" alt=""
@@ -341,20 +355,6 @@
                 </h2>
                 <span class="image fit"
                   ><img src="images/eq/mv85152.jpeg" alt=""
-                /></span>
-              </div>
-            </div>
-            <hr />
-            <div class="row gtr-200">
-              <div class="col-6 col-12-medium">
-                <h2>AOI 自動光學檢查機 <br />MV-8515-L</h2>
-                <span class="image fit"
-                  ><img src="images/eq/mv8515l3.jpeg" alt=""
-                /></span>
-              </div>
-              <div class="col-6 col-12-medium">
-                <span class="image fit"
-                  ><img src="images/eq/mv8515l.jpeg" alt=""
                 /></span>
               </div>
             </div>
@@ -374,7 +374,64 @@
             <ul>
               <li><a href="index.html">公司介紹</a></li>
               <li><a href="production_capacity.html">生產能力</a></li>
-              <li><a href="equipment.html">生產設備</a></li>
+              <li>
+                <span class="opener">生產設備</span>
+                <ul>
+                  <li><a href="equipment.html">生產設備</a></li>
+                  <li>
+                    <a href="equipment.html#ys12">YAMAHA 貼片機 - YS12</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#ys12f">YAMAHA 貼片機 - YS12F</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#ep-710"
+                      >全自動印刷機 Europlacer EP-710</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#v510i"
+                      >錫膏檢測機(SPI): VITROX(V510I)</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#nxt3">置件機-高速機 FUJI-NXT III</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#g200">
+                      電子零件貼裝機 <br />
+                      Electronic Part Mounter SONY SI-G200MK3</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#mv8515l"
+                      >AOI 自動光學檢查機 <br />MV-8515-L</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#ysd">YAMAHA-YSD 高速點膠機</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#100xg">YAMAHA 貼片機 100XG</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#125n2">BTU 氮氣迴焊爐-125N</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#gd2000">全自動印刷機 HTGD-GD2000</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#axc800">X-RAY 元件計數器-AXC-800</a>
+                  </li>
+                  <li><a href="equipment.html#xd7500">X-RAY XD7500</a></li>
+                  <li>
+                    <a href="equipment.html#mv8515m"
+                      >AOI 自動光學檢查機<br />
+                      MV-8515-M</a
+                    >
+                  </li>
+                </ul>
+              </li>
               <li>
                 <span class="opener">作業項目</span>
                 <ul>
@@ -416,8 +473,7 @@
           <!-- Footer -->
           <footer id="footer">
             <p class="copyright">
-              &copy; BaiLiChu. All rights reserved. Design:
-              <a href="http://errol.tw">Errol</a>.
+              &copy; BaiLiChu. All rights reserved.
             </p>
           </footer>
         </div>
