--- a/bailichu/production_capacity.html
+++ b/bailichu/production_capacity.html
@@ -35,6 +35,26 @@
               <h1>生產能力 Production Capacity</h1>
             </header>
 
+            <div class="row">
+              <div class="col-6 col-12-small">
+                <ul style="font-size: 18px">
+                  <li>SMT及DIP半成品、成品加工、代工</li>
+                  <li>
+                    PC相關周邊產品之來料加工、裝配、組立，各類印刷電路板組件
+                  </li>
+                  <li>SMT表面著裝製程加工(單面/雙面)、點膠、全無鉛</li>
+                </ul>
+              </div>
+              <div class="col-6 col-12-small">
+                <ul style="font-size: 18px">
+                  <li>專業Sample全製程試製</li>
+                  <li>
+                    3C產品類、各種介面卡、工業PC、行車紀錄器、通訊機板、電源供應器
+                  </li>
+                  <li>人工後焊/小量產測試、組裝、包裝/各類電子產品OEM</li>
+                </ul>
+              </div>
+            </div>
             <span class="image main"
               ><img src="images/capacity/prod_flow.png" alt=""
             /></span>
@@ -58,7 +78,64 @@
             <ul>
               <li><a href="index.html">公司介紹</a></li>
               <li><a href="production_capacity.html">生產能力</a></li>
-              <li><a href="equipment.html">生產設備</a></li>
+              <li>
+                <span class="opener">生產設備</span>
+                <ul>
+                  <li><a href="equipment.html">生產設備</a></li>
+                  <li>
+                    <a href="equipment.html#ys12">YAMAHA 貼片機 - YS12</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#ys12f">YAMAHA 貼片機 - YS12F</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#ep-710"
+                      >全自動印刷機 Europlacer EP-710</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#v510i"
+                      >錫膏檢測機(SPI): VITROX(V510I)</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#nxt3">置件機-高速機 FUJI-NXT III</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#g200">
+                      電子零件貼裝機 <br />
+                      Electronic Part Mounter SONY SI-G200MK3</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#mv8515l"
+                      >AOI 自動光學檢查機 <br />MV-8515-L</a
+                    >
+                  </li>
+                  <li>
+                    <a href="equipment.html#ysd">YAMAHA-YSD 高速點膠機</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#100xg">YAMAHA 貼片機 100XG</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#125n2">BTU 氮氣迴焊爐-125N</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#gd2000">全自動印刷機 HTGD-GD2000</a>
+                  </li>
+                  <li>
+                    <a href="equipment.html#axc800">X-RAY 元件計數器-AXC-800</a>
+                  </li>
+                  <li><a href="equipment.html#xd7500">X-RAY XD7500</a></li>
+                  <li>
+                    <a href="equipment.html#mv8515m"
+                      >AOI 自動光學檢查機<br />
+                      MV-8515-M</a
+                    >
+                  </li>
+                </ul>
+              </li>
               <li>
                 <span class="opener">作業項目</span>
                 <ul>
@@ -100,8 +177,7 @@
           <!-- Footer -->
           <footer id="footer">
             <p class="copyright">
-              &copy; BaiLiChu. All rights reserved. Design:
-              <a href="http://errol.tw">Errol</a>.
+              &copy; BaiLiChu. All rights reserved.
             </p>
           </footer>
         </div>
