--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -37,111 +37,102 @@
                 </h2>
               </header>
               <p>
-                百里助企業有限公司創立於1999年8月，<br />擁有專業的SMT代工、SMT打樣、SMT試產、與DIP加工能力。<br />在百里助，我們秉持高品質的產品理念，並以客戶為中心，<br />提供最專業的客戶服務
+                百里助企業有限公司創立於1999年8月，<br />擁有專業的SMT代工、SMT打樣、SMT試產、與DIP加工能力。<br />在百里助，我們秉持高品質的產品理念，並以客戶為中心，<br />提供最專業的客戶服務。
               </p>
             </div>
             <span class="image object">
               <img src="images/20.jpg" alt="" />
             </span>
           </section>
-
-          <!-- Section -->
           <section>
             <header class="major">
-              <h2>Statistic</h2>
+              <h2>製程能力 Process Capability</h2>
             </header>
-            <div class="features">
-              <article>
-                <span class="icon solid fa-user"></span>
-                <div class="content">
-                  <h3>Employees</h3>
-                  <h1>40</h1>
-                </div>
-              </article>
-              <article>
-                <span class="icon solid fa-home"></span>
-                <div class="content">
-                  <h3>Square footage</h3>
-                  <h1>300</h1>
-                </div>
-              </article>
+
+            <div class="row">
+              <div class="col-6 col-12-small">
+                <ul style="font-size: 18px">
+                  <li>
+                    PCB種類:單雙面多層板、鋁基板、雙面著裝板皆可生產加工。
+                  </li>
+                  <li>
+                    基板尺寸:最大610mm(L)*510mm(W)/最小50mm(L)*50mm(W)
+                  </li>
+                  <li>基板厚度:最大厚度4mm/最小厚度0.5mm</li>
+                  <li>零件尺寸:最小 00603 R/C</li>
+                  <li>可著裝最小IC腳距:0.2mm</li>
+                  <li>可著裝BGA球徑最小:0.15mm/球距0.25mm</li>
+                  <li>
+                    鋼板尺寸:最大736mm(L)*736mm(W)
+                  </li>
+                </ul>
+              </div>
+
+              <div class="col-6 col-12-small">
+                <ul style="font-size: 18px">
+                  <li>著裝機精度:+/-0.015mm/CHIP ; +/-0.05mm/QFP</li>
+                  <li>
+                    印刷機精度:+/-20um
+                  </li>
+                  <li>
+                    一般電容電阻(R.C)每日約210萬顆
+                  </li>
+                  <li>產能生產點數:2.4KK/天</li>
+                  <li>
+                    SMT全製程無鉛作業
+                  </li>
+                  <li>Sample打樣可快速交件</li>
+                </ul>
+              </div>
             </div>
           </section>
 
           <!-- Section -->
           <section>
             <header class="major">
-              <h2>Machineries</h2>
+              <h2>
+                <a href="equipment.html">生產設備 Production Equipment </a>
+              </h2>
             </header>
             <div class="posts">
               <article>
                 <a href="#" class="image"
-                  ><img src="images/m-01.jpg" alt=""
+                  ><img src="images/eq/ys12.jpg" alt=""
                 /></a>
-                <h3>Interdum aenean</h3>
-                <p>
-                  Aenean ornare velit lacus, ac varius enim lorem ullamcorper
-                  dolore. Proin aliquam facilisis ante interdum. Sed nulla amet
-                  lorem feugiat tempus aliquam.
-                </p>
+                <h3>YAMAHA 貼片機</h3>
                 <ul class="actions">
-                  <li><a href="#" class="button">More</a></li>
+                  <li><a href="equipment.html#ys12" class="button">More</a></li>
                 </ul>
               </article>
               <article>
                 <a href="#" class="image"
-                  ><img src="images/m-02.jpg" alt=""
+                  ><img src="images/eq/125n.jpg" alt=""
                 /></a>
-                <h3>Nulla amet dolore</h3>
-                <p>
-                  Aenean ornare velit lacus, ac varius enim lorem ullamcorper
-                  dolore. Proin aliquam facilisis ante interdum. Sed nulla amet
-                  lorem feugiat tempus aliquam.
-                </p>
+                <h3>氮氣迴焊爐</h3>
                 <ul class="actions">
-                  <li><a href="#" class="button">More</a></li>
+                  <li>
+                    <a href="equipment.html#125n2" class="button">More</a>
+                  </li>
                 </ul>
               </article>
               <article>
                 <a href="#" class="image"
-                  ><img src="images/m-03.jpg" alt=""
+                  ><img src="images/eq/v510i.jpg" alt=""
                 /></a>
-                <h3>Tempus ullamcorper</h3>
-                <p>
-                  Aenean ornare velit lacus, ac varius enim lorem ullamcorper
-                  dolore. Proin aliquam facilisis ante interdum. Sed nulla amet
-                  lorem feugiat tempus aliquam.
-                </p>
+                <h3>VITROX 錫膏檢測機</h3>
                 <ul class="actions">
-                  <li><a href="#" class="button">More</a></li>
+                  <li>
+                    <a href="equipment.html#v510i" class="button">More</a>
+                  </li>
                 </ul>
               </article>
               <article>
                 <a href="#" class="image"
-                  ><img src="images/m-04.jpg" alt=""
+                  ><img src="images/eq/nxt3.png" alt=""
                 /></a>
-                <h3>Sed etiam facilis</h3>
-                <p>
-                  Aenean ornare velit lacus, ac varius enim lorem ullamcorper
-                  dolore. Proin aliquam facilisis ante interdum. Sed nulla amet
-                  lorem feugiat tempus aliquam.
-                </p>
+                <h3>FUJI 放置機</h3>
                 <ul class="actions">
-                  <li><a href="#" class="button">More</a></li>
-                </ul>
-              </article>
-              <article>
-                <a href="#" class="image"
-                  ><img src="images/m-05.jpg" alt=""
-                /></a>
-                <h3>Feugiat lorem aenean</h3>
-                <p>
-                  Aenean ornare velit lacus, ac varius enim lorem ullamcorper
-                  dolore. Proin aliquam facilisis ante interdum. Sed nulla amet
-                  lorem feugiat tempus aliquam.
-                </p>
-                <ul class="actions">
-                  <li><a href="#" class="button">More</a></li>
+                  <li><a href="equipment.html#nxt3" class="button">More</a></li>
                 </ul>
               </article>
             </div>
