--- a/bailichu/equipment.html
+++ b/bailichu/equipment.html
@@ -207,7 +207,7 @@
               </div>
               <div class="col-6 col-12-medium">
                 <span class="image fit"
-                  ><img src="images/eq/nxt3.png" alt=""
+                  ><img src="images/eq/nxt3.jpg" alt=""
                 /></span>
               </div>
             </div>
@@ -322,15 +322,28 @@
             <div class="row gtr-200" id="xd7500">
               <div class="col-6 col-12-medium">
                 <h2>X-RAY XD7500</h2>
-                <span class="image fit"
+                <ul style="font-size: 18px">
+                  <li>Nordson DAGE 開放傳送型 X 射線管</li>
+                  <li>&lt;0.95 μm 特徵解析度 X 光管</li>
+                  <li>160 kV 管，目標功率可達 3W，具有次微米級特徵識別能力</li>
+                  <li>
+                    Nordson DAGE 1.33 Mpixel @ 10fps 長壽 CMOS
+                    平板檢測器（帶即時圖像增強功能
+                  </li>
+                  <li>幾何放大 1,400 X，系統 4,200 X</li>
+                  <li>最大電路板尺寸 29” x 22.8” (736 x 580 mm)</li>
+                  <li>高達 65° 斜角視圖，不影響放大效果</li>
+                  <li>23” TFT LCD 顯示器</li>
+                  <li>可自動執行檢測任務，無需程式設計技巧</li>
+                  <li>高品質即時成像</li>
+                  <li>μCT 選件</li>
+                </ul>
+                <span class="image fit row"
                   ><img
-                    style="height: auto;"
+                    style="height: auto; width: 50%;display: inline"
                     src="images/eq/xd75001.jpeg"
                     alt=""/><img
-                    style="height: auto;"
-                    src="images/eq/xd75002.jpeg"
-                    alt=""/><img
-                    style="height: auto;"
+                    style="height: auto; width: 50%;display: inline"
                     src="images/eq/xd75003.jpeg"
                     alt=""
                 /></span>
@@ -395,7 +408,7 @@
                     >
                   </li>
                   <li>
-                    <a href="equipment.html#nxt3">置件機-高速機 FUJI-NXT III</a>
+                    <a href="equipment.html#nxt3">FUJI-貼片機 NXT III</a>
                   </li>
                   <li>
                     <a href="equipment.html#g200">
