--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -56,32 +56,31 @@
                     PCB種類:單雙面多層板、鋁基板、雙面著裝板皆可生產加工。
                   </li>
                   <li>
-                    基板尺寸:最大610mm(L)*510mm(W)/最小50mm(L)*50mm(W)
+                    基板尺寸:最大610mm(L)*380mm(W)/最小50mm(L)*50mm(W)
                   </li>
                   <li>基板厚度:最大厚度4mm/最小厚度0.5mm</li>
-                  <li>零件尺寸:最小 00603 R/C</li>
+                  <li>零件尺寸:最小 01005 R/C</li>
                   <li>可著裝最小IC腳距:0.2mm</li>
-                  <li>可著裝BGA球徑最小:0.15mm/球距0.25mm</li>
-                  <li>
-                    鋼板尺寸:最大736mm(L)*736mm(W)
-                  </li>
                 </ul>
               </div>
 
               <div class="col-6 col-12-small">
                 <ul style="font-size: 18px">
+                  <li>可著裝BGA球徑最小:0.15mm/球距0.25mm</li>
                   <li>著裝機精度:+/-0.015mm/CHIP ; +/-0.05mm/QFP</li>
                   <li>
                     印刷機精度:+/-20um
                   </li>
                   <li>
-                    一般電容電阻(R.C)每日約210萬顆
+                    一般電容電阻(R.C)每日約280萬顆
                   </li>
-                  <li>產能生產點數:2.4KK/天</li>
                   <li>
                     SMT全製程無鉛作業
                   </li>
                   <li>Sample打樣可快速交件</li>
+                  <li>
+                    鋼板尺寸:最大735mm(L)*735mm(W)
+                  </li>
                 </ul>
               </div>
             </div>
@@ -128,9 +127,9 @@
               </article>
               <article>
                 <a href="#" class="image"
-                  ><img src="images/eq/nxt3.png" alt=""
+                  ><img src="images/eq/nxt3.jpg" alt=""
                 /></a>
-                <h3>FUJI 放置機</h3>
+                <h3>FUJI 貼片機</h3>
                 <ul class="actions">
                   <li><a href="equipment.html#nxt3" class="button">More</a></li>
                 </ul>
