--- a/bailichu/index.html
+++ b/bailichu/index.html
@@ -118,7 +118,7 @@
                 <a href="#" class="image"
                   ><img src="images/eq/v510i.jpg" alt=""
                 /></a>
-                <h3>VITROX 錫膏檢測機</h3>
+                <h3>VITROX SPI 錫膏檢測機</h3>
                 <ul class="actions">
                   <li>
                     <a href="equipment.html#v510i" class="button">More</a>
